# handlink

./: .env.dev  .gitignore  LICENSE  README.md  app.py  location.py  make_env.py  pyproject.toml  seed.py  seed_mock_services.py  seed_test_data.py  tasks.py
handlink/: __init__.py
handlink/ext/admin/: __init__.py  views.py
handlink/ext/auth/: __init__.py
handlink/ext/config/: __init__.py
handlink/ext/db/: __init__.py
handlink/ext/wtf/: __init__.py
handlink/forms/: appointments.py  auth.py  services.py
handlink/models/: __init__.py  appointment.py  category.py  location.py  role.py  role_user.py  service.py  user.py
handlink/views/: __init__.py  appointments.py  auth.py  main.py  services.py  user.py
static/css/: auth.css  base.css  main.css
static/js/: flash.js  home.js  main.js  services.js  utils.js
templates/: base.html
templates/auth/: base.html  login.html  signup.html
templates/auth/partials/: footer.html  navbar.html
templates/main/: about.html  base.html  create_service.html  index.html  seja_prestador.html  service_details.html  services.html
templates/main/appointment/: my_appointments.html  request_appointment.html
templates/main/partials/: ad.html  footer.html  navbar.html
templates/main/provider/: provider_panel.html
templates/main/service/: create_service.html  service_details.html  services.html
templates/profile/: profile.html
templates/services/: category.html  detail.html
tests/: conftest.py  test_auth.py  test_main.py  test_profile.py  test_services.py
